fix: dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -225,7 +225,8 @@
       "Helvetica Neue", Arial, sans-serif;
   }
 
-  .jsonjoy.dark {
+  .jsonjoy.dark,
+  .dark .jsonjoy {
     --background: hsl(222.2 84% 4.9%);
     --foreground: hsl(210 40% 98%);
 
